Implemented api/user/me endpoint with authorization
